src/k8s/canary/payments/payments.deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: payments
  namespace: canary
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: payments
        tier: frontend
    spec:
      containers:
      - name: payments
        image: gcr.io/kip-styles/payments:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
        volumeMounts:
        - mountPath: /kip/payments/secrets/
          name: kip-creditcard
          readOnly: true
        resources: {}
        securityContext: {}
      volumes:
      - name: kip-creditcard
        secret:
          secretName: kip-cc
