src/k8s/canary/payments/canary.payments.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: payments
  namespace: canary
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: payments
        tier: frontend
    spec:
      containers:
      - name: payments
        image: gcr.io/kip-styles/payments:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /kip/payments/secrets/
          name: kip-creditcard
          readOnly: true
        securityContext: {}
      volumes:
      - name: kip-creditcard
        secret:
          secretName: kip-cc
---
apiVersion: v1
kind: Service
metadata:
  name: payments
  namespace: canary
  labels:
    app: payments
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    name: http
    protocol: TCP
  selector:
    app: payments
