src/k8s/canary/payments/payments.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payments
  namespace: canary
  labels:
    app: payments
    tier: frontend
spec:
  ports:
  - name: http
    port: 8000
    protocol: TCP
    targetPort: 8080
  - name: https
    port: 443
    protocol: TCP
    targetPort: 8080
  selector:
    app: payments
  type: NodePort
